k8s/postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: store
  name: postgres
  labels:
    type: database
    app: postgres
spec:
  # strategy update
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  #template of database
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - image: postgres:15.5-alpine3.19
        name: postgres
        #resource of pod
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
        #enveroments variables
        ports:
        - containerPort: 5432
          name: postgres
        # volumes
        volumeMounts:
        - mountPath: /database
          name: database
        imagePullPolicy: Always
      volumes:
      - name: database
        emptyDir: {}
      restartPolicy: Always
