k8s/shopping-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: store
  name: shopping-api
  labels:
    type: service
    app: shopping-api
spec:
  # strategy update
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  selector:
    matchLabels:
      app: shopping-api
  #template of database
  template:
    metadata:
      labels:
        app: shopping-api
    spec:
      containers:
      - image: silviocavalcanti/store:shopping-api-1.1.0
        name: shopping-api
        #resource of pod
        resources:
          limits:
            cpu: "500m"
            memory: "256Mi"
        #enveroments variables
        ports:
        - containerPort: 8082
