k8s/user-service.yml
kind: Service
apiVersion: v1
metadata:
  name: user-api
  namespace: store
  labels:
    run: user-api
spec:
  selector:
    app: user-api
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
